# TextRecognition

./: CMakeLists.txt  README.md  main.cpp
models/: frozen_graph.xml
python/: .decoder.py.swp  .infer.py.swp  decoder.py  infer.py
src/: .decoder.cpp.swp  argparse.h  decoder.cpp  decoder.h
